[FIX] web_editor: avoid lines being wrapped in edit mode
Before this fix, the text was carried over to a new line automatically
as the margin is reached because of the different font family.

Now, the same font family/size as in readonly mode is used for both.

--- a/addons/web_editor/static/src/scss/web_editor.backend.scss
+++ b/addons/web_editor/static/src/scss/web_editor.backend.scss
@@ -9,11 +9,6 @@
         line-height: inherit !important;
         color: inherit !important;
         overflow: visible;
-
-        p, div {
-            font-family: 'Lucida Grande', Helvetica, Verdana, Arial, sans-serif;
-            font-size: 13px;
-        }
     }
     ul > li > p, p {
         margin: 0px;
